<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg"
    tools:context=".GuardFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180dp"
        android:layout_margin="@dimen/dimen_16dp"
        app:cardBackgroundColor="@color/pink_bg"
        app:cardCornerRadius="@dimen/dimen_16dp"
        app:cardElevation="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/text_sos"
        style="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_16dp"
        android:text="@string/sos_text"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_24sp"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        app:layout_constraintTop_toTopOf="@+id/pink_card" />

    <TextView
        android:id="@+id/sos_msg"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_16dp"
        android:text="@string/sos_msg_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/sos_img"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        app:layout_constraintTop_toBottomOf="@+id/text_sos" />

    <ImageView
        android:id="@+id/sos_img"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_16dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@+id/pink_card"
        app:layout_constraintEnd_toEndOf="@+id/pink_card"
        app:layout_constraintTop_toTopOf="@+id/pink_card" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/blue_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180dp"
        android:layout_margin="@dimen/dimen_16dp"
        app:cardBackgroundColor="@color/teal_bg"
        app:cardCornerRadius="@dimen/dimen_16dp"
        app:cardElevation="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@+id/pink_card" />

    <TextView
        android:id="@+id/text_gaurd"
        style="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_16dp"
        android:text="@string/gaurd_text"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_24sp"
        app:layout_constraintStart_toStartOf="@+id/blue_card"
        app:layout_constraintTop_toTopOf="@+id/blue_card" />

    <TextView
        android:id="@+id/gaurd_msg"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_16dp"
        android:text="@string/gaurd_msg_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/gaurd_img"
        app:layout_constraintStart_toStartOf="@+id/blue_card"
        app:layout_constraintTop_toBottomOf="@+id/text_gaurd" />

    <ImageView
        android:id="@+id/gaurd_img"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_margin="@dimen/dimen_16dp"
        android:elevation="@dimen/dimen_16dp"
        android:src="@drawable/ic_guard"
        app:layout_constraintBottom_toBottomOf="@+id/blue_card"
        app:layout_constraintEnd_toEndOf="@+id/blue_card"
        app:layout_constraintTop_toTopOf="@+id/blue_card" />


</androidx.constraintlayout.widget.ConstraintLayout>